lab-8 fix aligning for small displays

--- a/lab8/index.html
+++ b/lab8/index.html
@@ -130,6 +130,9 @@
       .carousel {
         aspect-ratio: 4 / 3;
       }
+      .dots {
+        position: relative;
+      }
     }
 
     @media (min-width: 768px) {
