--- a/lab8/index.html
+++ b/lab8/index.html
@@ -167,6 +167,17 @@
     <div class="dots"></div>
   </div>
 
+  <div class="images-large">
+    <img src="burger-large-1.jpg" alt="Бургер великий 1" />
+    <img src="burger-large-2.jpg" alt="Бургер великий 2" />
+    <img src="burger-large-3.jpg" alt="Бургер великий 3" />
+  </div>
+  <div class="images-medium">
+    <img src="burger-medium-1.jpg" alt="Бургер малий 1" />
+    <img src="burger-medium-2.jpg" alt="Бургер малий 2" />
+    <img src="burger-medium-3.jpg" alt="Бургер малий 3" />
+  </div>
+
   <script>
     window.onload = function () {
       const mobileMenu = document.getElementById("mobile-menu");
